--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,17 @@
 spring.application.name=JobApp
-server.Port=8099
-spring.mvc.view.prefix=/views/
+server.port=8099
+
+# JSP view resolver (your JSPs are inside /WEB-INF/views/)
+spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+# PostgreSQL Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/jobposts
+spring.datasource.username=postgres
+spring.datasource.password=tarun@123
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA / Hibernate Settings
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
